[gd_scene load_steps=8 format=3 uid="uid://e3m87fab8sjm"]

[ext_resource type="Script" path="res://Player/GUI/Inventory/inventoryScreen.gd" id="1_5xidi"]
[ext_resource type="Texture2D" uid="uid://bbiqai1hq0o5m" path="res://Assets/SpriteSheets/NES - The Legend of Zelda - HUD & Pause Screen.png" id="1_cptov"]

[sub_resource type="AtlasTexture" id="AtlasTexture_us4bt"]
atlas = ExtResource("1_cptov")
region = Rect2(0, 0, 256, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_55jyx"]
atlas = ExtResource("1_cptov")
region = Rect2(258, 112, 256, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_abo5a"]
atlas = ExtResource("1_cptov")
region = Rect2(1, 112, 256, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_he7ak"]
atlas = ExtResource("1_cptov")
region = Rect2(519, 42, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnl1f"]
atlas = ExtResource("1_cptov")
region = Rect2(256, 0, 256, 64)

[node name="InventoryScreen" type="CanvasLayer"]
script = ExtResource("1_5xidi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ItemsBackground" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_us4bt")

[node name="MapBackground" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_55jyx")

[node name="TriforceBackground" type="TextureRect" parent="VBoxContainer"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_abo5a")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TriforceBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -28.0
offset_right = 48.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_he7ak")

[node name="PLACEHOLDER" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_qnl1f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 128.0
offset_top = 49.0
offset_right = 144.0
offset_bottom = 65.0

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 152.0
offset_top = 49.0
offset_right = 168.0
offset_bottom = 65.0

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 49.0
offset_right = 192.0
offset_bottom = 65.0

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 200.0
offset_top = 49.0
offset_right = 216.0
offset_bottom = 65.0

[node name="Button5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 128.0
offset_top = 67.0
offset_right = 144.0
offset_bottom = 83.0

[node name="Button6" type="Button" parent="Control"]
layout_mode = 0
offset_left = 152.0
offset_top = 67.0
offset_right = 168.0
offset_bottom = 83.0

[node name="Button7" type="Button" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 67.0
offset_right = 192.0
offset_bottom = 83.0

[node name="Button8" type="Button" parent="Control"]
layout_mode = 0
offset_left = 200.0
offset_top = 67.0
offset_right = 216.0
offset_bottom = 83.0
